# nanobot-windows-gui

./: .gitignore  .gitmodules  LICENSE  README.md  README_CN.md
nanobot-manager/: CMakeLists.txt
nanobot-manager/installer/: installer.nsi  version.nsh.in
nanobot-manager/scripts/: build.bat  package.bat
nanobot-manager/src/: autostart.c  autostart.h  config.c  config.h  main.cpp  process.c  process.h  resources.rc  version.h.in
nanobot-manager/ui/: dashboard.uix
